--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,9 @@ header {
     width: 100%;
 }
 
-video::-webkit-media-controls-start-playback-button {
+/* video::-webkit-media-controls-start-playback-button {
     display: none;
-}
+} */
 
 .main {
     width: 100vw;
@@ -49,7 +49,17 @@ video::-webkit-media-controls-start-playback-button {
     z-index:1;
 }
 
+@media only screen and (width: 1366px) {
+    .container video {
+        width: 1366px;
+    }
+}
 
+@media only screen and (max-width: 1080px) {
+    .container video {
+        width: 100vw;
+    }
+}
 /* #video {
    width: 100vw;
    height: 100vh; 
