--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,13 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: 'Myriad Pro Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('../fonts/Myriad Pro Regular'), url('../fonts/MYRIADPRO-REGULAR.woff') format('woff');
+}
+    
 html {
     overflow-y: scroll;
     scrollbar-width: none; /* Firefox */
@@ -10,6 +17,7 @@ html {
     width: auto !important;
     overflow-x: hidden !important;
     -webkit-overflow-scrolling: touch;
+    font-family: 'Myriad Pro Regular';
 }
 
 html::-webkit-scrollbar { 
@@ -47,6 +55,108 @@ header {
     top:0;
     left:0;
     z-index:1;
+    width: 100vw;
+}
+
+.overlay .logo {
+    float: left;
+    padding-top: 8.9vh;
+    padding-left: 6.94vw;
+    color: white;
+    font-weight: bolder;
+    font-optical-sizing: auto;
+    font-size: 31px;
+    letter-spacing: 1px;
+    font-stretch: extra-expanded;
+}
+.overlay .menu {
+    float: left;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: -11.48vh;
+    padding-left: 85.8vw;
+    letter-spacing: 1.2px;
+}
+
+.overlay .main-title {
+    float: left;
+    color: white;
+    font-weight: bolder;
+    letter-spacing: 3.3px;
+    padding-top: 11.5vh;
+    padding-left: 10.4vw;
+}
+
+.overlay .sub-title {
+    float: left;
+    color: rgb(53, 53, 54);
+    font-weight: bolder;
+    padding-top: 2.2vh;
+    padding-left: 10.4vw;
+}
+
+.overlay .sub-title .span1 {
+    font-size: 22px;
+}
+
+.overlay .sub-title .span2 {
+    font-size: 22px;
+    letter-spacing: 2px;
+}
+
+.overlay .main-title .span1 {
+    font-size: 67px;
+}
+
+.overlay .main-title .span2 {
+    font-size: 74px;
+}
+
+.overlay .invite {
+    float: left;
+    padding-top: 15vh;
+}
+
+.overlay .invite button {
+    border-radius: 8px;
+    margin-left: -25.14vw;
+    width: 16.66vw;
+    height: 6.7vh;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    border: 0;
+    background-color: #3398DB;
+    font-size: 16px;
+    font-weight: bolder;
+    font-family: 'Myriad Pro Regular';
+    letter-spacing: 0.4px;
+    text-shadow: 4px;
+}
+
+.overlay .message-line {
+    float: left;
+    padding-top: 5vh;
+    padding-left: 2vw;
+    color: white;
+}
+
+.overlay .message-line .part1 {
+    width: 10vw;
+}
+
+.overlay .message-line .part1 .img1 {
+
+}
+
+.overlay .message-line .part1 .title1 {
+
+}
+
+
+.overlay .message-line .part1 .message1 {
+
 }
 
 @media only screen and (width: 1366px) {
