--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,8 @@ header {
 
 .overlay .sub-title {
     float: left;
-    color: rgb(53, 53, 54);
+    color: white;
+    /* color: rgb(53, 53, 54); */
     font-weight: bolder;
     padding-top: 2.2vh;
     padding-left: 10.4vw;
