--- a/css/main.css
+++ b/css/main.css
@@ -4,20 +4,28 @@
 }
 
 @font-face {
-    font-family: 'Myriad Pro Regular';
-    font-style: normal;
-    font-weight: normal;
-    src: local('../fonts/Myriad Pro Regular'), url('../fonts/MYRIADPRO-REGULAR.woff') format('woff');
+    font-family: 'Poppins Regular';
+    src: url("../fonts/Poppins-Regular.otf") format("opentype");
 }
-    
+
+@font-face {
+    font-family: 'Poppins SemiBold';
+    src: url("../fonts/Poppins-SemiBold.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'Poppins Bold';
+    src: url("../fonts/Poppins-Bold.otf") format("opentype");
+}
+
 html {
     overflow-y: scroll;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* IE 10+ */
-    width: auto !important;
-    overflow-x: hidden !important;
+    scrollbar-width: none; 
+    -ms-overflow-style: none; 
+    width: 100vw;
+    overflow-x: hidden !important; 
     -webkit-overflow-scrolling: touch;
-    font-family: 'Myriad Pro Regular';
+    font-family: 'Poppins SemiBold', sans-serif;
 }
 
 html::-webkit-scrollbar { 
@@ -25,12 +33,29 @@ html::-webkit-scrollbar {
     height: 0;
 }
 
-header {
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    padding-left: 1.6vw;
+    color: #B9B9B9;
+    opacity: 1; /* Firefox */
+}
+  
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    padding-left: 1.6vw;
+    color: #B9B9B9;
+}
+  
+::-ms-input-placeholder { /* Microsoft Edge */
+    padding-left: 1.6vw;
+    color: #B9B9B9;
+}
+
+
+/* header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-}
+    width: 100vw;
+} */
 
 /* video::-webkit-media-controls-start-playback-button {
     display: none;
@@ -46,9 +71,13 @@ header {
 .container video {
     position:relative;
     z-index:0;
-    width: 1920px;
+    width: 100vw;
     /* height: 100vh;  */
  }
+
+ /* .signs {
+     font-family: 'Times New Roman', Times, serif;
+ } */
 
  .overlay {
     position:absolute;
@@ -58,106 +87,212 @@ header {
     width: 100vw;
 }
 
+.overlay .header {
+    float: left;
+    width: 100vw;
+    color: white;
+}
+
 .overlay .logo {
     float: left;
     padding-top: 8.9vh;
-    padding-left: 6.94vw;
-    color: white;
-    font-weight: bolder;
-    font-optical-sizing: auto;
-    font-size: 31px;
-    letter-spacing: 1px;
-    font-stretch: extra-expanded;
+    padding-left: 6.98vw;
 }
+
 .overlay .menu {
     float: left;
+    padding-top: 10.7vh;
+    padding-left: 65.36vw;
     color: white;
+    /* color: #D0D1D2; */
     font-size: 16px;
-    font-weight: bold;
-    margin-top: -11.48vh;
-    padding-left: 85.8vw;
-    letter-spacing: 1.2px;
+    font-family: 'Poppins Bold';
+    letter-spacing: 0.2px;
 }
 
 .overlay .main-title {
     float: left;
     color: white;
-    font-weight: bolder;
-    letter-spacing: 3.3px;
-    padding-top: 11.5vh;
+    padding-top: 11.2vh;
     padding-left: 10.4vw;
+    font-size: 66px;
+    width: 100vw;
 }
 
 .overlay .sub-title {
     float: left;
     color: white;
-    /* color: rgb(53, 53, 54); */
-    font-weight: bolder;
-    padding-top: 2.2vh;
+    /* color: #BBBEBF; */
+    padding-top: 1.8vh;
     padding-left: 10.4vw;
-}
-
-.overlay .sub-title .span1 {
-    font-size: 22px;
-}
-
-.overlay .sub-title .span2 {
-    font-size: 22px;
-    letter-spacing: 2px;
-}
-
-.overlay .main-title .span1 {
-    font-size: 67px;
-}
-
-.overlay .main-title .span2 {
-    font-size: 74px;
+    font-family: 'Poppins Regular';
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0.7px;
+    width: 100vw;
 }
 
 .overlay .invite {
     float: left;
-    padding-top: 15vh;
+    padding-top: 10vh;
+    padding-left: 10.4vw;
+    width: 100vw;
 }
 
 .overlay .invite button {
     border-radius: 8px;
-    margin-left: -25.14vw;
     width: 16.66vw;
     height: 6.7vh;
     color: white;
     text-align: center;
     vertical-align: middle;
+    padding-top: 0.52vh;
     border: 0;
     background-color: #3398DB;
     font-size: 16px;
-    font-weight: bolder;
-    font-family: 'Myriad Pro Regular';
+    font-family: 'Poppins Bold', sans-serif;
     letter-spacing: 0.4px;
     text-shadow: 4px;
 }
 
-.overlay .message-line {
+.one-third {
     float: left;
-    padding-top: 5vh;
-    padding-left: 2vw;
+    width: 26.864vw;
+}
+
+.overlay .circle {
+    float: left;
+}
+
+.overlay .shapes {
+    float: left;
+    padding-top: 23.1vh;
+    padding-left: 10.4vw;
+    width: 100vw;
+}
+
+.overlay .shapes .title {
+    float: left;
+    padding-left: 1.4vw;
+    font-size: 20px;
     color: white;
+    vertical-align: text-top;
 }
 
-.overlay .message-line .part1 {
-    width: 10vw;
+.overlay .shapes .message {
+    float: left;
+    padding-left: 1.4vw;
+    font-size: 22px;
+    font-family: 'Poppins Regular', sans-serif;
+    color: white;
+    /* color: #AAACAE; */
 }
 
-.overlay .message-line .part1 .img1 {
-
+.middle-content {
+    float: left;
+    padding-top: 12.2vh;
+    padding-left: 10.4vw;
+    padding-bottom: 12.2vh;
+    width: 100vw;
 }
 
-.overlay .message-line .part1 .title1 {
-
+.middle-content .title {
+    color: #3398DB;
+    font-family: 'Poppins Bold', sans-serif;
+    font-size: 16px;
 }
 
+.middle-content .text {
+    color: rgb(175, 172, 172);
+    font-family: 'Poppins Regular', sans-serif;
+    font-size: 19px;
+}
 
-.overlay .message-line .part1 .message1 {
+.invite-section {
+    float: left;
+    width: 100vw;
+}
 
+.overlay .invite-form {
+    float: left;
+    margin-top: 71vh;
+}
+
+.overlay .invite-form .title {
+    padding-left: 11.9vw;
+    font-family: 'Poppins SemiBold', sans-serif;
+    font-size: 57px;
+    color: #3398DB;
+}
+
+.overlay .invite-form form {
+    padding-top: 1.83vh;
+    padding-left: 10.4vw;
+}
+
+.overlay .invite-form form input {
+    width: 18.78vw;
+    height: 6.7vh;
+    background-color: #E8E8E8;
+    border-radius: 5px;
+    border: 0;
+    margin-right:  1.2vw;
+    margin-bottom: 2.76vh;
+    font-family: 'Poppins Regular', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.4px;
+    text-shadow: 0.4px 0.4px #B9B9B9;
+}
+
+.overlay .invite-form form textarea {
+    width: 38.9vw;
+    height: 11.3vh;
+    margin-bottom: 1.06vw;
+    background-color: #E8E8E8;
+    border-radius: 5px;
+    border: 0;
+    font-family: 'Poppins Regular', sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.4px;
+    text-shadow: 0.4px 0.4px #B9B9B9;
+    padding-top: 2.3vh;
+}
+
+.overlay .invite-form form button {
+    width: 38.9vw;
+    height: 6.94vh;
+    background-color: #3398DB;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 0.52vh;
+    border-radius: 5px;
+    border: 0;
+    background-color: #3398DB;
+    font-size: 16px;
+    font-family: 'Poppins Bold', sans-serif;
+    letter-spacing: 0.4px;
+    text-shadow: 4px;
+}
+
+.overlay .home-link {
+    margin-top: 245.5vh;
+    margin-left: 46.4vw;
+    width: 3.2vw;
+    height: 2vh;
+    position: absolute;
+}
+
+.overlay .about-link {
+    margin-top: 245.5vh;
+    margin-left: 50.65vw;
+    width: 3vw;
+    height: 2vh;
+    position: absolute;
+}
+
+.noir-slides {
+    width: 100vw;
 }
 
 @media only screen and (width: 1366px) {
@@ -171,7 +306,3 @@ header {
         width: 100vw;
     }
 }
-/* #video {
-   width: 100vw;
-   height: 100vh; 
-} */
