--- a/css/main.css
+++ b/css/main.css
@@ -22,10 +22,31 @@ html {
     overflow-y: scroll;
     scrollbar-width: none; 
     -ms-overflow-style: none; 
-    width: 100vw;
+    /* width: 100vw; */
     overflow-x: hidden !important; 
     -webkit-overflow-scrolling: touch;
     font-family: 'Poppins SemiBold', sans-serif;
+}
+
+body {
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    width: 100vw;
+}
+
+header {
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    width: 100vw;
+}
+
+
+
+body > footer {
+    position: fixed;
+    bottom: 0;
 }
 
 a {
@@ -36,13 +57,6 @@ a {
 html::-webkit-scrollbar { 
     width: 0;
     height: 0;
-}
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
 }
 
 picture {
@@ -86,16 +100,20 @@ video::-webkit-media-controls-start-playback-button {
     padding-left: 6.98vw;
 }
 
+.overlay .header .logo picture img {
+    width: 13.5vw;
+    height: 12.5vh;
+}
+
 .overlay .menu {
     float: left;
     padding-top: 10.7vh;
     padding-left: 65.36vw;
     /* color: white; */
     color: #C9C9CB;
-    /* font-size: 16px; */
-    font-size: 0.83vw;
+    font-size: 0.85vw;
     font-family: 'Poppins Bold';
-    letter-spacing: 0.2px;
+    letter-spacing: 0.012vw;
 }
 
 .overlay .main-title {
@@ -103,7 +121,6 @@ video::-webkit-media-controls-start-playback-button {
     color: white;
     padding-top: 11.2vh;
     padding-left: 10.4vw;
-    /* font-size: 66px; */
     font-size: 3.442vw;
     width: 100vw;
 }
@@ -115,10 +132,9 @@ video::-webkit-media-controls-start-playback-button {
     padding-top: 1.82vh;
     padding-left: 10.4vw;
     font-family: 'Poppins Regular';
-    /* font-size: 20px; */
     font-size: 1.04vw;
     font-weight: 600;
-    letter-spacing: 0.7px;
+    letter-spacing: 0.038vw;
     width: 100vw;
 }
 
@@ -130,7 +146,7 @@ video::-webkit-media-controls-start-playback-button {
 }
 
 .overlay .invite button {
-    border-radius: 8px;
+    border-radius: 0.5vw;
     width: 16.66vw;
     height: 6.7vh;
     color: white;
@@ -139,11 +155,10 @@ video::-webkit-media-controls-start-playback-button {
     padding-top: 0.52vh;
     border: 0;
     background-color: #3398DB;
-    /* font-size: 16px; */
     font-size: 0.814vw;
     font-family: 'Poppins Bold', sans-serif;
-    letter-spacing: 0.4px;
-    text-shadow: 4px;
+    letter-spacing: 0.025vw;
+    text-shadow: 0.25vw;
 }
 
 .one-third {
@@ -166,7 +181,6 @@ video::-webkit-media-controls-start-playback-button {
     float: left;
     padding-left: 1.4vw;
     margin-top: -0.3vh;
-    /* font-size: 20px; */
     font-size: 0.98vw;
     color: white;
     vertical-align: text-top;
@@ -176,7 +190,6 @@ video::-webkit-media-controls-start-playback-button {
     float: left;
     padding-left: 1.4vw;
     margin-top: -0.3vh;
-    /* font-size: 22px; */
     font-size: 1.1vw;
     font-family: 'Poppins Regular', sans-serif;
     color: white;
@@ -195,20 +208,19 @@ video::-webkit-media-controls-start-playback-button {
     padding-bottom: 2.62vh;
     color: #3398DB;
     font-family: 'Poppins Bold', sans-serif;
-    /* font-size: 16px; */
     font-size: 0.838vw;
 }
 
 .middle-content .text {
     color: rgb(175, 172, 172);
     font-family: 'Poppins Regular', sans-serif;
-    /* font-size: 19px; */
     font-size: 0.95vw;
 }
 
 .invite-section {
     float: left;
     width: 100vw;
+    line-height: 0;
 }
 
 .overlay .invite-form {
@@ -219,7 +231,6 @@ video::-webkit-media-controls-start-playback-button {
 .overlay .invite-form .title {
     padding-left: 11.9vw;
     font-family: 'Poppins SemiBold', sans-serif;
-    /* font-size: 57px; */
     font-size: 2.932vw;
     color: #3398DB;
 }
@@ -246,15 +257,12 @@ video::-webkit-media-controls-start-playback-button {
     width: 17.18vw;
     height: 6.7vh;
     background-color: #E8E8E8;
-    /* border-radius: 5px; */
     border-radius: 0.25vw;
     border: 0;
     margin-right:  1.2vw;
     margin-bottom: 2.76vh;
     font-family: 'Poppins Regular', sans-serif;
-    /* font-size: 18px; */
     font-size: 0.94vw;
-    /* letter-spacing: 0.4px; */
     letter-spacing: 0.025vw;
     text-shadow: 0.025vw 0.025vw #B9B9B9;
     padding-left: 1.6vw;
@@ -265,11 +273,10 @@ video::-webkit-media-controls-start-playback-button {
     height: 11.3vh;
     margin-bottom: 1.06vw;
     background-color: #E8E8E8;
-    /* border-radius: 5px; */
     border-radius: 0.25vw;
     border: 0;
     font-family: 'Poppins Regular', sans-serif;
-    font-size: 18px;
+    font-size: 1vw;
     letter-spacing: 0.025vw;
     text-shadow: 0.025vw 0.025vw #B9B9B9;
     padding-top: 2.3vh;
@@ -284,32 +291,13 @@ video::-webkit-media-controls-start-playback-button {
     text-align: center;
     vertical-align: middle;
     padding-top: 0.52vh;
-    /* border-radius: 5px; */
     border-radius: 0.25vw;
     border: 0;
     background-color: #3398DB;
-    font-size: 16px;
+    font-size: 0.84vw;
     font-family: 'Poppins Bold', sans-serif;
     letter-spacing: 0.025vw;
-    /* letter-spacing: 0.4px; */
-    /* text-shadow: 4px; */
     text-shadow: 0.25vw;
-}
-
-.overlay .home-link {
-    margin-top: 245.5vh;
-    margin-left: 46.4vw;
-    width: 3.2vw;
-    height: 2vh;
-    position: absolute;
-}
-
-.overlay .about-link {
-    margin-top: 245.5vh;
-    margin-left: 50.65vw;
-    width: 3vw;
-    height: 2vh;
-    position: absolute;
 }
 
 .about .home-link-m {
@@ -366,6 +354,27 @@ video::-webkit-media-controls-start-playback-button {
     width: 14.6vw;
 }
 
+.footer {
+    position:relative;
+    bottom:0;
+}
+
+.footer .home-link {
+    margin-top: 9.3vh;
+    margin-left: 46.4vw;
+    width: 3.2vw;
+    height: 2.3vh;
+    position: absolute;
+}
+
+.footer .about-link {
+    margin-top: 9.3vh;
+    margin-left: 50.65vw;
+    width: 3vw;
+    height: 2.3vh;
+    position: absolute;
+}
+
 .footer .home-link-a {
     margin-top: 9vh;
     margin-left: 46.4vw;
@@ -380,13 +389,4 @@ video::-webkit-media-controls-start-playback-button {
     width: 3vw;
     height: 2vh;
     position: absolute;
-}
-
-@media only screen and (width: 1366px) {
-}
-
-@media only screen and (max-width: 1080px) {
-    .container video {
-        width: 100vw;
-    }
 }
