desktops / laptops responsive resolution done

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ video::-webkit-media-controls-start-playback-button {
     left:0;
     z-index:1;
     width: 100vw;
+    height: 100%;
 }
 
 .overlay .header {
@@ -96,18 +97,21 @@ video::-webkit-media-controls-start-playback-button {
 
 .overlay .logo {
     float: left;
-    padding-top: 8.9vh;
+    /* padding-top: 8.9vh; */
+    padding-top: 4.55vw;
     padding-left: 6.98vw;
 }
 
 .overlay .header .logo picture img {
     width: 13.5vw;
-    height: 12.5vh;
+    /* height: 12.5vh; */
+    height: 6.6vw;
 }
 
 .overlay .menu {
     float: left;
-    padding-top: 10.7vh;
+    /* padding-top: 10.7vh; */
+    padding-top: 5.49vw;
     padding-left: 65.36vw;
     /* color: white; */
     color: #C9C9CB;
@@ -119,10 +123,12 @@ video::-webkit-media-controls-start-playback-button {
 .overlay .main-title {
     float: left;
     color: white;
-    padding-top: 11.2vh;
+    /* padding-top: 11.2vh; */
+    padding-top: 5.8vw;
     padding-left: 10.4vw;
     font-size: 3.442vw;
     width: 100vw;
+    letter-spacing: normal;
 }
 
 .overlay .sub-title {
@@ -140,7 +146,8 @@ video::-webkit-media-controls-start-playback-button {
 
 .overlay .invite {
     float: left;
-    padding-top: 10vh;
+    /* padding-top: 10vh; */
+    padding-top: 5.3vw;
     padding-left: 10.4vw;
     width: 100vw;
 }
@@ -148,17 +155,25 @@ video::-webkit-media-controls-start-playback-button {
 .overlay .invite button {
     border-radius: 0.5vw;
     width: 16.66vw;
-    height: 6.7vh;
+    /* height: 6.7vh; */
+    height: 3.4vw;
     color: white;
     text-align: center;
     vertical-align: middle;
-    padding-top: 0.52vh;
+    /* padding-top: 0.47vh; */
+    padding-top: 0.1vw;
     border: 0;
     background-color: #3398DB;
     font-size: 0.814vw;
     font-family: 'Poppins Bold', sans-serif;
     letter-spacing: 0.025vw;
     text-shadow: 0.25vw;
+    cursor: pointer;
+    opacity: 1;
+}
+
+.overlay .invite button:hover {
+    opacity: 0.9;
 }
 
 .one-third {
@@ -172,7 +187,8 @@ video::-webkit-media-controls-start-playback-button {
 
 .overlay .shapes {
     float: left;
-    padding-top: 23.1vh;
+    /* padding-top: 23.1vh; */
+    padding-top: 11.36vw;
     padding-left: 10.4vw;
     width: 100vw;
 }
@@ -180,8 +196,9 @@ video::-webkit-media-controls-start-playback-button {
 .overlay .shapes .title {
     float: left;
     padding-left: 1.4vw;
-    margin-top: -0.3vh;
-    font-size: 0.98vw;
+    /* margin-top: -0.3vh; */
+    width: 14vw;
+    font-size: 0.99vw;
     color: white;
     vertical-align: text-top;
 }
@@ -189,7 +206,8 @@ video::-webkit-media-controls-start-playback-button {
 .overlay .shapes .message {
     float: left;
     padding-left: 1.4vw;
-    margin-top: -0.3vh;
+    padding-top: 0.8vw;
+    /* margin-top: -0.3vh; */
     font-size: 1.1vw;
     font-family: 'Poppins Regular', sans-serif;
     color: white;
@@ -219,24 +237,36 @@ video::-webkit-media-controls-start-playback-button {
 
 .invite-section {
     float: left;
-    width: 100vw;
-    line-height: 0;
+    /* width: 100vw; */
+    width: 100%;
+    /* line-height: 0; */
+    
+    background-image: url("../img/noir-invite.png");
+
+    height: 41vw;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
-.overlay .invite-form {
+.invite-form {
     float: left;
-    margin-top: 71vh;
+    position: absolute;
+    margin-top: 7vw;
 }
 
-.overlay .invite-form .title {
+.invite-form .title {
     padding-left: 11.9vw;
     font-family: 'Poppins SemiBold', sans-serif;
     font-size: 2.932vw;
     color: #3398DB;
 }
 
-.overlay .invite-form form {
-    padding-top: 1.83vh;
+.invite-form form {
+    /* padding-top: 1.83vh; */
+    padding-top: 1vw;
     padding-left: 10.4vw;
 }
 
@@ -253,14 +283,16 @@ video::-webkit-media-controls-start-playback-button {
     color: #B9B9B9;
 }
 
-.overlay .invite-form form input {
+.invite-form form input {
     width: 17.18vw;
-    height: 6.7vh;
+    /* height: 6.7vh; */
+    height: 3.5vw;
     background-color: #E8E8E8;
     border-radius: 0.25vw;
     border: 0;
     margin-right:  1.2vw;
-    margin-bottom: 2.76vh;
+    /* margin-bottom: 2.76vh; */
+    margin-bottom: 1.4vw;
     font-family: 'Poppins Regular', sans-serif;
     font-size: 0.94vw;
     letter-spacing: 0.025vw;
@@ -268,9 +300,10 @@ video::-webkit-media-controls-start-playback-button {
     padding-left: 1.6vw;
 }
 
-.overlay .invite-form form textarea {
+.invite-form form textarea {
     width: 37.3vw;
-    height: 11.3vh;
+    /* height: 11.3vh; */
+    height: 5.78vw;
     margin-bottom: 1.06vw;
     background-color: #E8E8E8;
     border-radius: 0.25vw;
@@ -279,18 +312,21 @@ video::-webkit-media-controls-start-playback-button {
     font-size: 1vw;
     letter-spacing: 0.025vw;
     text-shadow: 0.025vw 0.025vw #B9B9B9;
-    padding-top: 2.3vh;
+    /* padding-top: 2.3vh; */
+    padding-top: 1.29vw;
     padding-left: 1.6vw;
 }
 
-.overlay .invite-form form button {
+.invite-form form button {
     width: 38.9vw;
-    height: 6.94vh;
+    /* height: 6.94vh; */
+    height: 3.48vw;
     background-color: #3398DB;
     color: white;
     text-align: center;
     vertical-align: middle;
-    padding-top: 0.52vh;
+    /* padding-top: 0.52vh; */
+    padding-top: 0.18vw;
     border-radius: 0.25vw;
     border: 0;
     background-color: #3398DB;
@@ -298,13 +334,21 @@ video::-webkit-media-controls-start-playback-button {
     font-family: 'Poppins Bold', sans-serif;
     letter-spacing: 0.025vw;
     text-shadow: 0.25vw;
+    cursor: pointer;
+    opacity: 1;
+}
+
+.invite-form form button:hover {
+    opacity: 0.9;
 }
 
 .about .home-link-m {
-    margin-top: 11.4vh;
+    /* margin-top: 11.4vh; */
+    margin-top: 5.75vw;
     margin-left: 87.3vw;
     width: 3.4vw;
-    height: 2vh;
+    /* height: 2vh; */
+    height: 1vw;
     position: absolute;
 }
 
@@ -326,30 +370,35 @@ video::-webkit-media-controls-start-playback-button {
 .eco .grow-a ,
 .eco .currency-a ,
 .eco .ventures-a {
-    height: 6vh;
+    /* height: 6vh; */
+    height: 2.8vw;
     position: absolute;
 }
 
 .eco .hives-a {
-    margin-top: 31.4vh;
+    /* margin-top: 31.4vh; */
+    margin-top: 15.6vw;
     margin-left: 10.4vw;
     width: 8vw;
 }
 
 .eco .grow-a {
-    margin-top: 45.7vh;
+    /* margin-top: 45.7vh; */
+    margin-top: 22.7vw;
     margin-left: 10.4vw;
     width: 8vw;
 }
 
 .eco .currency-a {
-    margin-top: 59.4vh;
+    /* margin-top: 59.4vh; */
+    margin-top: 29.4vw;
     margin-left: 10.4vw;
     width: 18.6vw;
 }
 
 .eco .ventures-a {
-    margin-top: 79vh;
+    /* margin-top: 79vh; */
+    margin-top: 40vw;
     margin-left: 10.4vw;
     width: 14.6vw;
 }
@@ -360,7 +409,8 @@ video::-webkit-media-controls-start-playback-button {
 }
 
 .footer .home-link {
-    margin-top: 9.3vh;
+    /* margin-top: 9.3vh; */
+    margin-top: 4.8vw;
     margin-left: 46.4vw;
     width: 3.2vw;
     height: 2.3vh;
@@ -368,7 +418,8 @@ video::-webkit-media-controls-start-playback-button {
 }
 
 .footer .about-link {
-    margin-top: 9.3vh;
+    /* margin-top: 9.3vh; */
+    margin-top: 4.8vw;
     margin-left: 50.65vw;
     width: 3vw;
     height: 2.3vh;
@@ -376,7 +427,8 @@ video::-webkit-media-controls-start-playback-button {
 }
 
 .footer .home-link-a {
-    margin-top: 9vh;
+    /* margin-top: 9vh; */
+    margin-top: 4.7vw;
     margin-left: 46.4vw;
     width: 3.2vw;
     height: 2vh;
@@ -384,7 +436,8 @@ video::-webkit-media-controls-start-playback-button {
 }
 
 .footer .about-link-a {
-    margin-top: 9vh;
+    /* margin-top: 9vh; */
+    margin-top: 4.7vw;
     margin-left: 50.7vw;
     width: 3vw;
     height: 2vh;
