--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ video::-webkit-media-controls-start-playback-button {
     left:0;
     z-index:1;
     width: 100vw;
-    height: 100%;
+    height: 10vw;
 }
 
 .overlay .header {
@@ -115,6 +115,39 @@ video::-webkit-media-controls-start-playback-button {
     font-size: 0.85vw;
     font-family: 'Poppins Bold';
     letter-spacing: 0.012vw;
+}
+
+.overlay .about-main-title {
+    float: left;
+    width: 100vw;
+    padding-top: 5vw;
+    padding-left: 10vw;
+    color: white;
+    font-family: 'Poppins SemiBold', sans-serif;
+    font-size: 3.02vw; 
+}
+
+.overlay .about-main-text {
+    float: left;
+    width: 34vw;
+    /* text-align: justify; */
+    text-justify: auto;
+    padding-top: 1vw;
+    padding-left: 10vw;
+    color: white;
+    font-family: 'Poppins Regular', sans-serif;
+    font-size: 1.3vw; 
+}
+
+.overlay .about-main-message {
+    float: left;
+    width: 100vw;
+    padding-top: 9vw;
+    padding-left: 22vw;
+    color: white;
+    font-family: 'Poppins SemiBold', sans-serif;
+    font-size: 1.4vw; 
+    letter-spacing: 0.35vw;
 }
 
 .overlay .main-title {
@@ -326,13 +359,13 @@ video::-webkit-media-controls-start-playback-button {
     color: #B9B9B9;
 }
 
-.about .home-link-m {
+/* .about .home-link-m {
     margin-top: 5.75vw;
     margin-left: 87.3vw;
     width: 3.4vw;
     height: 1vw;
     position: absolute;
-}
+} */
 
 .about,
 .eco,
@@ -346,6 +379,7 @@ video::-webkit-media-controls-start-playback-button {
     width: 100vw;
     display: block;
     line-height: 0;
+    position: relative;
 }
 
 canvas {
