--- a/css/media.css
+++ b/css/media.css
@@ -38,7 +38,8 @@
     .overlay .about-main-message {
         padding-top: 9.5vw;
         padding-left: 8.3vw;
-        font-size: 2.42vw; 
+        /* font-size: 2.42vw;  */
+        font-size: 2.2vw; 
         font-weight: bolder;
         letter-spacing: 0.2vw;
     }
